--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "codespaces-react",
+  "homepage": "https://milesbythesea.github.io/carmel",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -19,7 +20,9 @@
     "start": "BROWSER=none WDS_SOCKET_PORT=0 vite --port 3000",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "vitest"
+    "test": "vitest",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -41,6 +44,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.1.1",
+    "gh-pages": "^6.3.0",
     "jsdom": "^22.1.0",
     "vite": "^4.5.9",
     "vitest": "^0.34.6"
