--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "milesbythesea",
-  "name": "Create React App Sample",
+  "short_name": "milesawaybythesea",
+  "name": "Miles Away by the Sea",
   "icons": [
     {
       "src": "favicon.ico",
