--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "codespaces-react",
-  "homepage": "https://milesbythesea.github.io/carmel",
+ "homepage": "https://www.milesawaybythesea.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
